--- a/MyBici2/nbproject/project.properties
+++ b/MyBici2/nbproject/project.properties
@@ -27,8 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/MyBici2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.DateChooser.jar=F:\\Descargas\\DateChooser.jar
-file.reference.jcalendar-1.4.jar=F:\\Descargas\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=jcalendar-1.4.jar
 file.reference.MiExcepcion.jar=MiExcepcion.jar
 file.reference.mysql-connector-java-8.0.12.jar=mysql-connector-java-8.0.12.jar
 includes=**
@@ -36,8 +35,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.MiExcepcion.jar}:\
     ${file.reference.mysql-connector-java-8.0.12.jar}:\
-    ${file.reference.DateChooser.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
